--- a/src/patterns.html
+++ b/src/patterns.html
@@ -1,42 +1,96 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <title data-i18n="patterns">FoxyProxy </title>
+    <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
-    <link rel="stylesheet" href="styles/vex.css"/>
-    <link rel="stylesheet" href="styles/vex-theme-default.css"/>
-		<link rel="stylesheet" href="styles/clusterize.css"/>
+    <link rel="stylesheet" href="styles/vex-4.1.0.css"/>
+    <link rel="stylesheet" href="styles/vex-theme-default-4.1.0.css"/>
+    <link rel="stylesheet" href="styles/clusterize-0.18.0.css"/>
+    <style>
+      .flex { display: flex; }
+      .flex > * { flex: 1; }
+      tbody tr:hover { background-color: #cae1d3 !important; }
+      tbody td { padding: 0.2em; }
+      th:nth-of-type(1), th:nth-of-type(2) { min-width: 10em; }
+      th:nth-of-type(3), th:nth-of-type(4), th:nth-of-type(5) { width: 5em; }
+      th:nth-of-type(6) { width: 7em; }
+      td:nth-of-type(3), td:nth-of-type(4), td:nth-of-type(5) { text-align: center; }
+    </style>
   </head>
-  <body style="margin: 1rem">
+  <body style="padding: 1em;">
 
-  <div class="row callout"><div class="small-12 columns">
-      <img style="vertical-align:inherit" src="/images/48x48.svg"><h2 id="windowTitle"style="vertical-align:text-bottom;display:inline;margin-left:1rem;">FoxyProxy</h2></div></div>
-  <div class="callout">
-
-    <div id="spinnerRow" class="row">
-      <div class="small-12 small-centered columns">
-        <div class="row callout">
-          <i class="fa fa-refresh fa-spin fa-5x fa-fw fp-orange"></i>
-        </div>
-      </div>
+    <!-- header -->
+    <div class="callout">
+      <h3 id="header"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> </h3>
     </div>
 
-    <div id="errorRow" class="row hide-unimportant">
-      <div class="small-12 small-centered columns">
-        <div class="row">
-          <h4>There was an error. Please try again.</h4>
-        </div>
-        <div class="row">
-          <input id="errorOkButton" type="button" class="button" value="Ok">
-        </div>
-      </div>
+    <!-- spinner -->
+    <div id="spinner" class="callout hide-unimportant">
+      <span class="fa fa-refresh fa-spin fa-5x fa-fw fp-orange"></span>
     </div>
 
-    <div id="patternsRow" class="row hide-unimportant" style="margin: 0.5rem">
+    <!-- error -->
+    <div id="error" class="callout hide-unimportant">
+      <h5 data-i18n="errorWas"></h5>
+      <button type="button" class="button" data-i18n="back">&#x25c1; </button>
+    </div>
+
+    <!-- main -->
+    <div class="callout" style="padding: 1em;">
+      <p style="text-align: right;">
         <a href="/pattern-help.html" target="_blank">Pattern Help</a> |
         <a href="/pattern-tester.html" target="_blank">Pattern Tester</a>
+      </p>
 
+      <h5 data-i18n="whitePatterns"></h5>
+      <!-- table template -->
+      <div style="max-height: 40vh; overflow-y: auto; margin-bottom: 2em;">
+        <table style="width: 100%;">
+          <thead>
+            <tr>
+              <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
+              <th>HTTP/s</th><th data-i18n="onOff"></th><th data-i18n="edit"></th>
+             </tr>
+            <!-- template -->
+            <tr class="template">
+               <td></td><td></td><td></td><td></td><td></td>
+               <td style="text-align: right;">
+                <a id="imported" class="hide-unimportant"><i class="fa fa-1point8x fa-upload fp-orange"></i></a>
+                <a id="edit" ><i class="fa fa-1point8x fa-pencil"></i></a>
+                <a id="delete" ><i class="fa fa-1point8x fa-trash"></i></a>
+               </td>
+            </tr>
+          </thead>
+
+          <tbody></tbody>
+        </table>
+      </div>
+
+
+      <h5 data-i18n="blackPatterns"></h5>
+      <div style="max-height: 40vh; overflow-y: auto;">
+
+        <table style="width: 100%;">
+          <thead>
+            <tr>
+              <th data-i18n="name"></th><th data-i18n="pattern"></th><th data-i18n="type"></th>
+              <th>HTTP/s</th><th data-i18n="onOff"></th><th data-i18n="edit"></th>
+             </tr>
+          </thead>
+
+          <tbody></tbody>
+        </table>
+      </div>
+
+
+
+
+    <div id="patternsRow" class="row hide-unimportant" style="margin: 0.5rem">
+
+<!--
         <div id="whitePatternTitle" class="row small-12 columns"><h5>White Patterns</h5></div>
         <div class="row">
           <div class="small-3 columns pattern-row-header">Name</div>
@@ -46,11 +100,11 @@
           <div class="small-1 columns pattern-row-header">On/Off</div>
           <div class="small-2 columns pattern-row-header"> </div>
         </div>
-				<div id="whitePatternScrollArea" class="clusterize-scroll">
-				  <div id="whitePatternContentArea" class="clusterize-content">
-				    <div class="clusterize-no-data">Loading data...</div>
-				  </div>
-				</div>
+        <div id="whitePatternScrollArea" class="clusterize-scroll">
+          <div id="whitePatternContentArea" class="clusterize-content">
+            <div class="clusterize-no-data">Loading data...</div>
+          </div>
+        </div>
         <br>
         <div id="blackPatternTitle" class="row small-12 columns"><h5>Black Patterns</h5></div>
         <div class="row">
@@ -61,42 +115,42 @@
           <div class="small-1 columns pattern-row-header">On/Off</div>
           <div class="small-2 columns pattern-row-header"> </div>
         </div>
-				<div id="blackPatternScrollArea" class="clusterize-scroll">
-				  <div id="blackPatternContentArea" class="clusterize-content">
-				    <div class="clusterize-no-data">Loading data...</div>
-				  </div>
-				</div>
-				<br>
-        <div class="small-9 columns">
-          <span style="float: right">Add black patterns to prevent this proxy being used for localhost and intranet/private IP addresses
-						<span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" title="Adds blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*">Help</span>
-					</span>
+        <div id="blackPatternScrollArea" class="clusterize-scroll">
+          <div id="blackPatternContentArea" class="clusterize-content">
+            <div class="clusterize-no-data">Loading data...</div>
+          </div>
         </div>
-        <div class="small-3 columns">
-          <input id="addLocal" type="button" class="tiny button" value="Add">
-        </div>
+-->
 
-        <div class="small-12 columns"><br>
-					<span style="float: left">
-            <input id="export" type="button" class="button" value="Export Patterns">
-            <input id="import" type="button" class="button" value="Import Patterns">
-          </span>
-          <span style="float: right">
-            <input id="cancel" type="button" class="button alert" value="Cancel">
-            <input id="newBlack" type="button" class="button" value="New Black">
-            <input id="newWhite" type="button" class="button" value="New White">
-            <input id="save" type="button" class="button" value="Save">
-          </span>
-        </div>
-      </div>
+
+
     </div>
 
-  </body>
+    <p style="text-align: center;">Add black patterns to prevent this proxy being used for localhost and intranet/private IP addresses
+      &nbsp;  <span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" title="Adds blacklist patterns for localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, and 10.*.*.*">Help</span>
+        <button type="button" class="button tiny" style="margin-left: 1em; vertical-align: initial;" data-i18n="add"></button></p>
+
+     <div class="flex">
+        <div>
+          <button type="button" class="button" data-i18n="importPatterns"></button>
+          <button type="button" class="button" data-i18n="exportPatterns"></button>
+        </div>
+        <div style="text-align: right;">
+          <button type="button" class="button alert" data-i18n="cancel"></button>
+          <button type="button" class="button" data-i18n="newWhite"></button>
+          <button type="button" class="button" data-i18n="newBlack"></button>
+          <button type="button" class="button" style="margin-right: 0;" data-i18n="save"></button>
+        </div>
+      </div>
+
+    </div>
+
+
+  <script src="scripts/vex.combined-4.1.0.js"></script>
+  <script src="scripts/clusterize-0.18.0.js"></script>
   <script src="scripts/const.js"></script>
-  <script src="scripts/jquery-3.4.1.min.js"></script>
-  <script src="scripts/vex.combined.js"></script>
-  <script src="scripts/patterns.js"></script>
-  <script src="scripts/storage.js"></script>
   <script src="scripts/utils.js"></script>
-	<script src="scripts/clusterize.min.js"></script>
+  <script src="scripts/storage.js"></script>
+  <script src="scripts/patterns.js"></script>
+  </body>
 </html>
