--- a/src/import.html
+++ b/src/import.html
@@ -1,46 +1,54 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <title data-i18n="import">FoxyProxy </title>
+    <link rel="icon" type="image/png" href="/images/icon.svg">
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
   </head>
-  <body style="margin: 1rem">
+  <body style="padding: 1em;">
 
-    <div class="row">
-      <div class="small-12 columns">
-        <div class="row callout">
-            <img style="vertical-align:inherit" src="/images/48x48.svg"><h2 id="title" style="vertical-align:text-bottom;display:inline;margin-left:1rem;">FoxyProxy</h2>
-      </div>
-
-      <div class="row callout">
-        <div class="small-12 columns">
-          <div class="hide-if-upgrade hide-unimportant">
-            <h4>Import Settings from FoxyProxy 6.x (current version)</h4>
-            <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends, <a id="export">export</a> FoxyProxy settings. Then use this page to import those settings. By default, the file is called foxyproxy.json.</p>
-            <input id="importJson" type="file">
-
-            <h4>Import Settings From Older FoxyProxy Versions</h4>
-            <p>Older FoxyProxy versions used a pop-up window. It looked a little different on Windows, Mac, and Linux, but the essence was this (click image for larger picture):<br><a target="_blank" href="/images/foxyproxy-legacy-version.png"><img src="/images/foxyproxy-legacy-version.png" style="width: 20%"></a><br>File is called foxyproxy.xml by default. You can find it in the <a target="_blank" href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile">Firefox profile directory</a>.</p>
-            <input id="importXml2" type="file">
-
-          </div>
-          <span class="hide-if-not-upgrade hide-unimportant">
-            <h4>Import Settings From Older FoxyProxy Versions</h4>
-            <p>You just upgraded from an older version of FoxyProxy. Firefox has completely changed the addon system since the previous FoxyProxy version. Unfortunately, due to Firefox 57+ limitations, we cannot read your FoxyProxy settings automatically. But they are not lost. To import your old settings, please select the file <strong>foxyproxy.xml</strong> below. You can find it in the <a target="_blank" href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile">Firefox profile directory</a>.</p>
-            <input id="importXml1" type="file">
-          </span>
-          <span style="float: right">
-            <input id="cancelBtn" type="button" class="button" value="Cancel">
-          </span>
-        </div>
-      </div>
+    <!-- header -->
+    <div class="callout">
+      <h3 data-i18n="options"><img src="/images/icon.svg" style="vertical-align: middle;" alt=""> FoxyProxy </h3>
     </div>
 
-    <script src="scripts/jquery-3.4.1.min.js"></script>
-    <script src="scripts/storage.js"></script>
-    <script src="scripts/utils.js"></script>
-    <script src="scripts/import.js"></script>
-    <script src="scripts/const.js"></script>
+    <!-- main -->
+    <div class="callout" style="padding: 2em;">
+
+      <div class="hide-if-upgrade hide-unimportant">
+        <h4>Import Settings from FoxyProxy 6.x (current version)</h4>
+        <p>FoxyProxy can use <a href="https://support.mozilla.org/products/firefox/sync" target="_blank">Firefox Sync</a> to synchronize settings across different installations of Firefox. But if you don't use Firefox Sync or want to share your settings with friends, <a id="export">export</a> FoxyProxy settings. Then use this page to import those settings. By default, the file is called foxyproxy.json.</p>
+        <input id="importJson" type="file" accept=".json">
+
+        <h4 style="margin-top: 2em;">Import Settings From Older FoxyProxy Versions</h4>
+        <div style="display: flex;">
+          <p style="margin-right: 1em;">Older FoxyProxy versions used a pop-up window. It looked a little different on Windows, Mac, and Linux, but the essence was this:<br>
+          File is called <i>foxyproxy.xml</i> by default. You can find it in the <a target="_blank" href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile">Firefox profile directory</a>.<br><br>
+          <input id="importXml2" type="file" accept=".xml"></p>
+          
+          <p style="text-align: center;"><a target="_blank" href="/images/legacy-version.png"><img src="/images/legacy-version.png" style="width: 300px;"></a><br>
+          (click image for larger picture)</p>
+        </div>
+      </div>
+
+      <div class="hide-if-not-upgrade hide-unimportant">
+        <h4>Import Settings From Older FoxyProxy Versions</h4>
+        <p>You just upgraded from an older version of FoxyProxy. Firefox has completely changed the addon system since the previous FoxyProxy version. Unfortunately, due to Firefox 57+ limitations, we cannot read your FoxyProxy settings automatically. But they are not lost. To import your old settings, please select the file <strong>foxyproxy.xml</strong> below. You can find it in the <a target="_blank" href="https://support.mozilla.org/en-US/kb/profiles-where-firefox-stores-user-data#w_how-do-i-find-my-profile">Firefox profile directory</a>.</p>
+        <input id="importXml1" type="file" accept=".xml">
+      </div>
+
+
+      <div style="text-align: right;">
+        <button id="cancelBtn" type="button" class="button" data-i18n="cancel"></button>
+      </div>
+
+    </div>
+
+  <script src="scripts/const.js"></script>
+  <script src="scripts/utils.js"></script>
+  <script src="scripts/storage.js"></script>
+  <script src="scripts/import.js"></script>
   </body>
 </html>
