--- a/src/log.html
+++ b/src/log.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
+      tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
       tbody tr:hover { background-color: #cae1d3 !important; }
       tbody td { padding: 0.2em; }
       td:nth-child(3) { width: 1em; border: 2px solid #fff; }
