--- a/src/patterns.html
+++ b/src/patterns.html
@@ -12,8 +12,10 @@
     <style>
       .flex { display: flex; }
       .flex > * { flex: 1; }
+      tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
       tbody tr:hover { background-color: #cae1d3 !important; }
       tbody td { padding: 0.2em; }
+      tbody td:nth-of-type(1), tbody td:nth-of-type(2) { max-width: 15em; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
       th:nth-of-type(1), th:nth-of-type(2) { min-width: 10em; }
       th:nth-of-type(3), th:nth-of-type(4), th:nth-of-type(5) { width: 5em; }
       th:nth-of-type(6) { width: 7em; }
