--- a/src/popup.html
+++ b/src/popup.html
@@ -5,15 +5,18 @@
     <link rel="stylesheet" href="styles/fontawesome-4.6.3.css">
     <link rel="stylesheet" href="styles/app.css">
     <style>
-      h6 {border-bottom: 1px solid #ccc; }
-      .button { margin-bottom: 0; padding: 0.5em 1em; }
-      li { cursor: pointer; line-height: normal; }
+      h6 { border-bottom: 1px solid #ccc; }
+      ul { max-height: 25em; overflow-y: auto; 
+        scrollbar-color: #ddd #f5f5f5; scrollbar-width: thin; }
+      li { cursor: pointer; line-height: normal; overflow: hidden;
+            text-overflow: ellipsis; white-space: nowrap; }
       li:hover { background-color: #ffebcd; }
       li span { display: inline-block; margin: 0 0.4em 0 1em; color: transparent; }
       li.on span { color: inherit; }
       li:nth-last-child(2) { color: orange; }
       li:nth-last-child(2) span, li:last-of-type span { margin-left: 0; }
       li:last-of-type { color: red; }
+            .button { margin-bottom: 0; padding: 0.5em 1em; }
     </style>
   </head>
   <body style="padding: 0.4em;">
@@ -29,8 +32,9 @@
     </div> -->
 
     <!-- error -->
-    <div class="callout hide-unimportant"><h5 data-i18n="errorWas"></h5></div>
-    
+    <div id="error" class="callout hide-unimportant"><h5 data-i18n="errorWas"></h5></div>
+
+
     <!-- main -->
     <div id="optionsRow" class="callout hide-unimportant" style="margin: 0;">
         <h6 data-i18n="modeSelection"></h6>
