--- a/src/log.html
+++ b/src/log.html
@@ -9,8 +9,13 @@
     <style>
       tbody tr:nth-child(even) { background-color: #f5fffa  !important; }
       tbody tr:hover { background-color: #cae1d3 !important; }
-      tbody td { padding: 0.2em; }
+      tbody td { padding: 0.2em; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+      td:nth-child(1) { max-width: 20em; }      
+      td:nth-child(2) { max-width: 5em; }
       td:nth-child(3) { width: 1em; border: 2px solid #fff; }
+      td:nth-child(4) { max-width: 8em; }
+      td:nth-child(5) { max-width: 8em; }
+      td:nth-child(6) { max-width: 14em; }
     </style>
   </head>
   <body style="padding: 1em;">
