--- a/src/add-edit-proxy.html
+++ b/src/add-edit-proxy.html
@@ -10,8 +10,8 @@
       .flex { display: flex; }
       .flex > * { flex: 1; }
       input::placeholder { font-style: italic; }
-      .main div:nth-child(1) { flex: 2;  margin-right: 1em; }
-      .main div:nth-child(2) { flex: 3; }
+      .main > div:nth-child(1) { flex: 2;  margin-right: 1em; }
+      .main > div:nth-child(2) { flex: 3; }
       .main label { display: inline-block; }
 
       .onOff > label { flex: 4;  margin-right: 1em; }
